# upstream-rs

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  TODO.md  build.rs  build.sh  install.sh  release.sh
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: support.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yaml
.github/workflows/: ci.yml  lint.yml  nightly.yml  registry.yml  release.yml  security.yml
.tally/: history.json
.tally/hooks/: post-commit
completions/: _upstream  _upstream.ps1  completions.bash  completions.elvish  completions.fish  completions.ps1  completions.zsh  upstream.bash  upstream.fish
docs/: backup.md  build.md  commands.md  configuration.md  index.md  installation.md  packages.md  troubleshooting.md  trust.md
registry/: CONTRIBUTING.md  NEWS.md  index.json  index.min.json
scripts/: changelog_for_tag.bash  generate-completions.sh  install.bash  install.ps1  install.sh  migrate_packages.bash  package.lash  preflight.lash  publish.lash  publish.sh  release.sh
scripts/install/: completions.ps1  completions.sh  install.bash  install.fish  install.ps1  install.zsh
scripts/registry/: build_index.py  common.py  import_list.py  validate.py  validate_revisions.py
scripts/release/: changelog_for_tag.bash  preflight.lash  prepare.lash  prepare.sh  promote-force.sh  promote.lash  promote.sh  publish.lash  publish.sh  resync.sh
scripts/test/: reset-testhome.sh  update-testbin.sh
src/: completions.rs  lib.rs  main.rs  migrate.rs  upstream_paths.rs
src/app/: mod.rs
src/app/cli/: args.rs  run.rs
src/app/features/: install_package.rs  mod.rs  package_installer.rs  package_remover.rs  package_upgrader.rs  remove_package.rs  upgrade_package.rs
src/app/operations/: install.rs  list.rs  mod.rs  remove.rs  upgrade.rs
src/application/: cancellation.rs  context.rs  mod.rs  output.rs
src/application/cli/: args.rs  arguments.rs  dispatch.rs  labels.rs  mod.rs  run.rs
src/application/commands/: add.rs  auth.rs  build.rs  cache.rs  changelog.rs  config.rs  docs.rs  doctor.rs  export.rs  find.rs  history.rs  hooks.rs  import.rs  info.rs  install.rs  list.rs  migrate.rs  mod.rs  package.rs  probe.rs  reinstall.rs  remove.rs  rollback.rs  search.rs  upgrade.rs
src/application/features/: build.rs  config.rs  doctor.rs  export.rs  hooks.rs  import.rs  init.rs  install.rs  list.rs  mod.rs  package.rs  package_installer.rs  package_remover.rs  package_upgrader.rs  probe.rs  reinstall.rs  remove.rs  upgrade.rs  upstream_init.rs
src/application/operations/: auth_op.rs  build_op.rs  build_operation.rs  config_op.rs  config_operation.rs  configurator.rs  doctor_operation.rs  export_op.rs  export_operation.rs  history_op.rs  hooks_op.rs  hooks_operation.rs  import_op.rs  import_operation.rs  init.rs  init_operation.rs  install.rs  install_op.rs  install_operation.rs  list.rs  metadata_op.rs  metadata_operation.rs  mod.rs  package_install.rs  package_lists.rs  package_metadata.rs  package_remove.rs  package_upgrade.rs  probe_op.rs  probe_operation.rs  remove.rs  remove_op.rs  remove_operation.rs  rollback_op.rs  rollback_operation.rs  upgrade.rs  upgrade_op.rs  upgrade_operation.rs  upstream_init.rs  verify_checksum.rs
src/features/: mod.rs
src/features/operations/: mod.rs
src/models/: mod.rs
src/output/: logger.rs  markdown.rs  mod.rs  pager.rs  prompt.rs  redaction.rs  status.rs  style.rs  table.rs
src/providers/: asset_selector.rs  discovery.rs  download_handler.rs  heuristic_asset_selector.rs  http_status.rs  mod.rs  neural_asset_selector.rs  pattern_matcher.rs  provider_manager.rs  release_provider.rs  selector-feature-v2b-full.nasl
src/routines/: mod.rs
src/services/: mod.rs
src/storage/: lock.rs  lock_storage.rs  manifest.rs  manifest_storage.rs  mod.rs  package_storage.rs  rollback.rs
src/utils/: console_colors.rs  filename_parser.rs  fs_move.rs  math.rs  mod.rs  name_match.rs  pager.rs  pid.rs  platform_info.rs  static_paths.rs  test_support.rs  upstream_paths.rs
tests/: cli_docs.rs  exit_status.rs
tests/fixtures/: README.md  dotslash-valid
tests/integration/: common.py  pkg_build.py  pkg_export_import.py  pkg_install.py  pkg_remove.py  pkg_rollback.py  pkg_upgrade.py  state_mutations.py
tests/metadata/: test_paths.rs
tests/providers/: provider_manager.rs
tests/registry/: test_registry.py
tests/utils/: filename_parser.rs  fs_move.rs  platform_info.rs  static_paths.rs
(+305 files in other folders)
