[package]
name = "upstream-rs"
version = "0.2.4"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
anyhow = "1.0"
dirs = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
bzip2 = "0.4"
indicatif = "0.18"
glob = "0.3"
md5 = "0.7"
sha2 = "0.10"
console = "0.16"

[profile.release]
opt-level = "s"     # Optimize for size, but dont cut speed much
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization, slower compile
strip = true        # Remove debug symbols
panic = "abort"     # Don't include unwinding code
