[package]
name = "upstream-rs"
version = "1.4.1"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Fetch package updates directly from the source."
repository = "https://github.com/what386/upstream-rs"
keywords = ["update", "package", "linux", "windows"]
categories = ["command-line-utilities", "development-tools"]

exclude = [
    ".github",
    "scripts/",
]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
anyhow = "1.0"
dirs = "6.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
flate2 = "1.0"
tar = "0.4"
zip = "7.0"
bzip2 = "0.6.1"
indicatif = "0.18"
glob = "0.3"
sha2 = "0.10"
console = "0.16"
toml = "0.9.10"
xz2 = "0.1.7"
zstd = "0.13.3"
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["winuser"] }

[profile.release]
opt-level = "s"     # Optimize for size, but dont cut speed much
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization, slower compile
strip = true        # Remove debug symbols
panic = "abort"     # Don't include unwinding code
