[package]
name = "upstream-rs"
version = "2.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Fetch package updates directly from the source."
repository = "https://github.com/what386/upstream-rs"
keywords = ["update", "package", "linux", "windows"]
categories = ["command-line-utilities", "development-tools"]

exclude = [
    ".github",
    "scripts/",
    "completions/"
]

[features]
default = []
shell-completions = ["dep:clap_complete"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
sevenz-rust2 = { version = "0.21.0", default-features = false, features = ["util", "bzip2", "ppmd"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "process", "sync", "time"] }
futures-util = "0.3"
anyhow = "1.0"
dirs = "6.0"
clap = { version = "4.6", features = ["derive"] }
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
tar = "0.4"
zip = { version = "8.6", default-features = false, features = ["deflate-flate2-zlib-rs"] }
bzip2 = "0.6.1"
indicatif = "0.18"
glob = "0.3"
sha2 = "0.11"
console = "0.16"
toml = "1.1.2"
xz2 = "0.1.7"
walkdir = "2.5.0"
clap_complete = { version = "4.6", optional = true }
zstd = "0.13.3"
minisign-verify = "0.2.5"
base64 = "0.22.1"
p256 = { version = "0.13.2", features = ["ecdsa", "pem", "pkcs8"] }
sigstore = { version = "0.14.0", default-features = false, features = ["cosign", "rustls-tls"] }
async-trait = "0.1.89"

[dev-dependencies]
sevenz-rust2 = { version = "0.21.0", default-features = false, features = ["util", "compress", "bzip2", "ppmd"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "minwinbase", "winbase", "winnt", "errhandlingapi", "winerror"] }

[[bin]]
name = "completions"
path = "src/completions.rs"
required-features = ["shell-completions"]

[[bin]]
name = "upstream"
path = "src/main.rs"
